# pyodide-demo

./: .gitignore  azure_core-1.25.0-py3-none-any.whl  bugs.md  index.html  package-lock.json  package.json  poetry.lock2  pyproject.toml  pyproject.toml2  readme.md  webpack.config.js
.vscode.temp/: launch.json  settings.json
deploy/: main.bicep  textanalytics.bicep  textanalytics.json
docs/: auth-woes.md  blog.md  bugs.md
docs/html/: async-bug-example.html  test_async.py  testing.html
scripts/: server.py  storage.py
src/: create_client.py  examples.js  examples.py  index.html  index.js  index.py  init.py  requirements.txt  transport.py
src/examples/: examples.js  health.py  language_detection.py  pii.py  receipts.py  sentiment_analysis.py  storage.py
test/: browser_test.py  index.html  mock_test.py  readme.md  unit_test.py
test/data/: successful-blob-download.json  successful-sentiment-analysis.json
test/integration/: browser_test.py  index.html  readme.md
