[tool.poetry]
name = "pyodide-demo"
version = "0.1.0"
description = ""
authors = ["Steven Jin <t-sjinxuan@microsoft.com>"]
packages = [
    { include = "transport.py", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
azure-ai-textanalytics = "^5.1.0"
msal = "^1.18.0"
azure-identity = "^1.10.0"
azure-storage-blob = "^12.12.0"
python-dotenv = "^0.20.0"
azure-ai-formrecognizer = "^3.1.2"
aiohttp = "^3.8.1"
pyodide-build = "^0.19.1"
pytest-selenium = "^3.0.0"
pytest = "6.2.5"
PyVirtualDisplay = "^3.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
ipykernel = "^6.14.0"
pylint = "^2.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.pylint]
disable = ["unspecified-encoding", "raise-missing-from"]

[tool.black]
line-length=88