[tool.poetry]
name = "pyodide-demo"
version = "0.1.0"
description = "Demo for Azure Python SDK working in the browser."
authors = ["Steven Jin Xuan <t-sjinxuan@microsoft.com>"]
packages = [
    { include = "transport.py", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
azure-ai-textanalytics = "^5.1.0"
azure-storage-blob = "^12.12.0"
azure-ai-formrecognizer = "^3.1.2"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"
pytest-asyncio = "^0.18.3"
black = "^22.3.0"
isort = "^5.10.1"
ipykernel = "^6.14.0"
pylint = "^2.14.1"
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = "--ignore-glob=test/integration/*"

[tool.pylint]
disable = ["unspecified-encoding", "raise-missing-from"]

[tool.black]
line-length=88